Wed May 14 14:09:56 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/ProjectCreator.pm:

          Fixed a bug with custom types when processing multiple mpc files
          that use a custom type.  The type definitions were not being
          removed after processing.

Wed May 14 13:52:37 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/README:
        * bin/MakeProjectCreator/modules/ProjectCreator.pm:
        * bin/MakeProjectCreator/templates/bor.mpd:
        * bin/MakeProjectCreator/templates/em3vcp.mpd:
        * bin/MakeProjectCreator/templates/gnu.mpd:
        * bin/MakeProjectCreator/templates/make.mpd:
        * bin/MakeProjectCreator/templates/nmake.mpd:
        * bin/MakeProjectCreator/templates/vc6dsp.mpd:
        * bin/MakeProjectCreator/templates/vc7.mpd:

          Always use gendir if it's defined not just if the output_option is
          specified.  The command may output to gendir without an
          output_option.

Wed May 14 11:11:31 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/nmake.mpd:

          Force the idl_stubs target to be processed before anything else.
          In case an idl file is listed but not explicitly listed in the
          source files, we still need to process the idl first.

Wed May 14 14:52:40 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * ace/config-all.h:
        * ace/README:
          Added new macro, ACE_USES_ALLOCA.  If it is not defined in the
          user's config.h, then turn off ACE_HAS_ALLOCA by default.

Tue May 13 09:39:13 2003  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

        * ace/OS.i (last_error): Fixed this method so that it assigns errno
          to the error value.  This fixes an inconsistency reported by
          Damien Dufour <damien.dufour@horanet.com>.

Tue May 13 16:59:00 2003  Simon McQueen  <sm@prismtechnologies.com>

        * include/makeinclude/ace_flags.bor: