@@ -174,7 +174,6 @@ ACE_HAS_ALLOCA                          Compiler/platform supports
                                         alloca()
 ACE_HAS_ALLOCA_H                        Compiler/platform has
                                         <alloca.h>
-ACE_USES_ALLOCA                         Enables us of alloca in ACE.
 ACE_HAS_ALPHA_TIMER                     CPU is an Alpha, with the rpcc
                                         instruction to read the tick timer.
                                         Limited to 32 bits, so not recommended.
