@@ -1,3 +1,10 @@
+Wed May 14 20:02:56 UTC 2003  Don Hinton  <dhinton@dresystems.com>
+
+        * ace/config-all.h:
+        * ace/README:
+          Rolled back Wed May 14 14:52:40 UTC 2003  Don Hinton
+          <dhinton@dresystems.com>.
+
 Wed May 14 14:09:56 2003  Chad Elliott  <elliott_c@ociweb.com>
 
         * bin/MakeProjectCreator/modules/ProjectCreator.pm:
